--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -41,7 +41,7 @@
 
         <div id="wrapper">
 
-            <div id="overlay" class="modal"></div>
+            <div id="overlay" class="modal">ready for it</div>
 
             <section id="error-disconnected" class="modal error-modal">
                 <div id="text" class="col-sm-8 col-centered">
