--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -1,69 +1,10 @@
-@media (min-width: 1024px) {
-	body .container {
-		width: 100%;
-	}
-	body .gameLanding {
-		margin-top: 15%;
-	}
+@media (min-width: 425px) {
 
-	body .player-background .icon {
-		height: 163px;
-
-	}
-	body .player-background {
+	#wrapper {
+		max-width: 425px;
+		height: 100%;
 		margin: 0 auto;
-		margin-bottom: 15%;
-		width: 180px;
-		height: 180px;
-    @include radius(90px);
-	}
-	body .player-background .icon img {
-		width: 180px;
-		height: 180px;
-	}
-	body .player-background .nameplate {
-		font-size: x-large;
 
 	}
-	body #waiting {
-		margin-top: 10%;
-	}
-	body .game-header.wait-players {
-		font-size: 2em;
-	}
-
-}
-
-@media (min-width: 2000px) {
-	body .game-header.wait-players {
-		font-size: 2em;
-	}
-
-	body .page-container {
-		margin-top: 10%;
-	}
-	body .player-background .icon {
-		height: 200px;
-
-	}
-	body .player-background {
-		margin: 0 auto;
-		margin-bottom: 10%;
-		width: 220px;
-		height: 220px;
-		border-radius: 110px;
-	}
-	body .player-background .icon img {
-		width: 220px;
-		height: 220px;
-	}
-	body .player-background .nameplate {
-		font-size: xx-large;
-
-	}
-
-	body .game-header {
-		font-size: 6em;
-	}
-
+	
 }
