game restyling to fit inside mobile view on large screens window resize function that hides content, calculates layout, and then shows content again

--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -1,6 +1,6 @@
 @media (min-width: 425px) {
 
-	#wrapper {
+	#wrapper:not(.home-wrap), .modal {
 		max-width: 425px;
 		height: 100%;
 		margin: 0 auto;
