--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -18,6 +18,7 @@
 
 	.game_login {
 		display: block;
+		position: absolute;
 			right: 0;
 			bottom: 0;
 			margin-bottom: 10px;
@@ -35,6 +36,7 @@
 
 	// Lobby game screens
 	.lobby {
+		height: 100%;
 		&:not(#decider) {
 			width: 100%;
 		  height: 70%;
@@ -58,15 +60,13 @@
 		}
 
 		#start {
-			position:fixed;
-			bottom: 0px;
 			width: 100%
 		}
 
 		// Show back button on login screen
 		.back-button {
 			display: block;
-			position: fixed;
+			position: absolute;
 			left: 0;
 			bottom: 0;
 			margin-bottom: 10px;
@@ -105,7 +105,9 @@
 			margin-bottom: 10px;		
 			background-color: transparent;
 			font-weight: 800;
-			float:right;
+			position:absolute;
+			right: 0px;
+			bottom: 0px;
 		}
 
 		.username {
@@ -189,8 +191,9 @@
 
 		.form {
 			padding: 8px;
-	    // position: absolute;
+	    // position: fixed;
 	    top: 10px;
+	    left: 0px;
 	    margin: 0 auto;
 	    z-index: 1000;
 		}
@@ -339,6 +342,7 @@
 
 	// Deck selection
 	.create {
+		height: 100%;
 
 		.form {
 			color: white;
@@ -484,6 +488,8 @@
 
 		height: 60px;
 		width: 70%;
+		// left: 15%;
+		// position: absolute;
 		display: inline-block;
 		padding: 0px;
 	  background-repeat: no-repeat;
