--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -39,9 +39,11 @@
             
         {{/ifeq}}
 
-        <div id="wrapper">
+        {{!-- <div class="hidden" id="resize">looks like you're doing some resizing...</div> --}}
 
-            <div id="overlay" class="modal">ready for it</div>
+        <div id="wrapper" class="{{#ifeq section 'homepage'}}home-wrap{{/ifeq}}">
+
+            <div id="overlay" class="modal"></div>
 
             <section id="error-disconnected" class="modal error-modal">
                 <div id="text" class="col-sm-8 col-centered">
@@ -51,7 +53,7 @@
             </section>
 
             <section id="error-player-disconnected" class="modal error-modal">
-                <div id="text" class="col-sm-8 col-centered">
+                <div id="text" class="col-sm-10 col-xs-12 col-centered">
                   <h1>Ummm...</h1>
                   <h2>It looks like <span id="player"></span> got disconnected from the game! They have <span id="time">60s</span> to reconnect before the game ends!</h2>
                 </div>
