--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -1,10 +1,8 @@
 
 #gameContent {
-	background: -moz-linear-gradient(top, $background-color 55%, $turquoise-dark 45%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top, $background-color 55%, $turquoise-dark 45%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom, $background-color 55%, $turquoise-dark 45%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	@include gradient-vertical($background-color, $turquoise-dark, 55%, 45%);
+	
 	height: 100%;
-	// overflow: hidden;
 	text-align: center;
 	padding: 8px;
 	color: white;
