--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -61,15 +61,16 @@
 
             {{!-- STAGES BAR --}}
             <section class="col-sm-12" id="stages-bar">
-                    <span id="progress"></span>
+                    <span id="fill" class="phase-path"></span>
+                    <span id="progress" class="phase-path"></span>
 
-                    <img src="/images/layout/stageicons/meet.svg" class="disabled" />
-                    <img src="/images/layout/stageicons/brainstorm.svg" class="disabled" />
-                    <img src="/images/layout/stageicons/pitch.svg" class="disabled" />
-                    <img src="/images/layout/stageicons/deliberate.svg" class="disabled" />
-                    <img src="/images/layout/stageicons/grandstand.svg" class="disabled" />
-                    <img src="/images/layout/stageicons/decide.svg" class="disabled" />
-                    <img src="/images/layout/stageicons/score.svg" class="disabled" />
+                    <div class="icon"><img src="/images/layout/stageicons/meet.svg" class="disabled" /><span>meet</span></div>
+                    <div class="icon"><img src="/images/layout/stageicons/brainstorm.svg" class="disabled" /><span>brainstorm</span></div>
+                    <div class="icon"><img src="/images/layout/stageicons/pitch.svg" class="disabled" /><span>pitch</span></div>
+                    <div class="icon"><img src="/images/layout/stageicons/deliberate.svg" class="disabled" /><span>deliberate</span></div>
+                    <div class="icon"><img src="/images/layout/stageicons/grandstand.svg" class="disabled" /><span>grandstand</span></div>
+                    <div class="icon"><img src="/images/layout/stageicons/decide.svg" class="disabled" /><span>decide</span></div>
+                   <div class="icon"> <img src="/images/layout/stageicons/score.svg" class="disabled" /><span>score</span></div>
             </section>
 
             {{!-- ROLE CARD OVERLAY --}}
