--- a/templates/partials/script/player_animation.hbs
+++ b/templates/partials/script/player_animation.hbs
@@ -20,8 +20,6 @@ function rulesAnim(callback) {
 	if(screens.length === 0)
 		return;
 
-		console.log(screens);
-  
   screensAnim = new TimelineLite({ paused: true, onComplete: 
 																										  	function() { TweenLite.fromTo($('#btn-next'), 1, {scale:0, autoAlpha:0}, {scale:1, autoAlpha:1, display:'block', ease:Elastic.easeOut}); } 
 																		});
@@ -87,14 +85,12 @@ function loginNewGame(callback) {
 
 function loginJoinGame() {
 
-	// loginAnim.clear();
 	loginAnim.to($('#choices'), .5, { autoAlpha:0, display: 'none' }, 'join')
 					 .fromTo($('#join'), .5, { autoAlpha:0, display: 'none' }, { autoAlpha:1, display: 'block' });
 
 	loginAnim.play();
 
 }
-
 
 function loginGoBack(from, to) {
 
@@ -103,3 +99,19 @@ function loginGoBack(from, to) {
 	// loginAnim.remove('join');
 	
 }
+
+function modalOpenClose(modalElement, open) {
+
+	var hidden = { yPercent:100, opacity:0, ease:Expo.easeOut, display:'none' },
+			shown = { yPercent:0, opacity:1, ease:Expo.easeIn, display:'block' };
+
+	TweenLite.fromTo(modalElement, .5, (open ? hidden:shown) , (open ? shown:hidden) );
+
+}
+
+$('.modal').on('show', function(evt) {
+	modalOpenClose($(evt.currentTarget), true);
+});
+$('.modal').on('hide', function(evt) {
+	modalOpenClose($(evt.currentTarget), false);
+});
