Fixes for mobile login.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -8,12 +8,11 @@
         <title>@Stake</title>
         <meta name="description" content="@Stake is an online and mobile role-playing game that fosters democracy, empathy, and creative problem solving for civic issues.">
         <meta name="author" content="Engagement Lab at Emerson College">
-        <meta name="viewport" content="width=device-width">
+        <meta name="theme-color" content="#e90048">
         
         {{#ifeq section 'play'}}
             {{!-- Mobile Meta --}}
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <meta name="theme-color" content="#FFAB43">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         {{/ifeq}}
 
         {{!-- Open Graph --}}
