--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -397,7 +397,7 @@ window.onload = checkIfLoggedIn();
 
 {{#ifeq debug true}}
     // Debugging view
-    {{#ifeq section 'login'}}
+    {{#ifeq section 'play'}}
         $('#access_code').val('TEST');
         $('#player-name').val('Player_' + Math.floor(Math.random() * (10 - 1 + 1)) + 1);
     {{/ifeq}}
