--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,7 +14,7 @@
       <div class="top-header col-sm-12 col-centered">
         <div class="landing-header"><span class="whats">what's</span></br><span class="at-sign">@</span><span class="header-stake">stake?</span></div>
       </div>
-      <div class="play-button">Play the game!</div>
+      <a class="buttonLink" href="/play"><div class="play-button">Play the game!</div></a>
     </div>
     <img class="landing-image" src="http://res.cloudinary.com/engagement-lab-home/image/upload/v1487958967/at-stake-site/stakewhitecropped.png">
   </div>
@@ -83,45 +83,18 @@
         <div class="people">
           <div class="team row pi"><h5 class="team-title">Principal Investigator </h5>{{content.principalInvestigator.name}}</div>
           <div class="team-col col-md-6" style="padding:0px">
-            <div class="team"><h5 class="team-title">Product Manager</h5>{{content.productManager.name}}</div>
+            <div class="team"><h5 class="team-title">Product Manager </h5>{{content.productManager.name}}</div>
             <div class="team"><h5 class="team-title">Lead Developer </h5>{{content.leadDeveloper.name}}</div>
-            <div class="team"><h5 class="team-title">Game Designer </h5>{{content.otherGameDesigner.name}}, {{content.gameDesigner.name}}</div>
-            <div class="team"><h5 class="team-title">Junior Developer </h5>{{content.juniorDeveloper.name}}</div>
+            <div class="team"><h5 class="team-title">Game Designer </h5>{{content.otherGameDesigner.name}}</div>
+            <div class="team"><h5 class="team-title">Game Designer </h5>{{content.gameDesigner.name}}</div>
           </div>
           <div class="team-col col-md-6" style="padding:0px">
             <div class="team"><h5 class="team-title">Project Manager </h5>{{content.projectManager.name}}</div>
             <div class="team"><h5 class="team-title">Art Director </h5>{{content.artDirector.name}}</div>
-            <div class="team"><h5 class="team-title">Production Assistant </h5>{{content.productionAssistant.name}}</div>
-            <div class="team"><h5 class="team-title">Production Assistant </h5>{{content.otherProductionAssistant.name}}</div>
+            <div class="team"><h5 class="team-title">Junior Developer </h5>{{content.juniorDeveloper.name}}</div>
+            <div class="team"><h5 class="team-title">Junior Developer </h5>{{content.otherProductionAssistant.name}}</div>
           </div>
         </div>
     </div>
     <div class="logo"><img class="el-logo" src="http://res.cloudinary.com/engagement-lab-home/image/upload/v1488406912/at-stake-site/el_logo_square_white_720.png"></div>
-
-
-{{!--     OLD CREDITS LAYOUT (hugs sides of page, stacks weirdly on small screens) --}}
-
-  {{!-- <div class="credits row col-sm-12 col-centered">
-  	<div class="design-dev-team">
-	    <h3>Design and Development Team</h3>
-	    <div class="team row pi"><h5 class="team-title">Principal Investigator </h5>{{content.principalInvestigator.name}}</div>
-      <div class="team-row row" style="padding:0px">
-  	    <div class="team left"><h5 class="team-title">Product Manager </h5>{{content.productManager.name}}</div>
-  	    <div class="team right"><h5 class="team-title">Project Manager </h5>{{content.projectManager.name}}</div>
-      </div>
-      <div class="team-row row" style="padding:0px">
-        <div class="team left"><h5 class="team-title">Lead Developer </h5>{{content.leadDeveloper.name}}</div>
-        <div class="team right"><h5 class="team-title">Art Director </h5>{{content.artDirector.name}}</div>
-      </div>
-      <div class="team-row row" style="padding:0px">
-        <div class="team left"><h5 class="team-title">Game Designer </h5>{{content.otherGameDesigner.name}}, {{content.gameDesigner.name}}</div>
-        <div class="team right"><h5 class="team-title">Junior Developer </h5>{{content.juniorDeveloper.name}}</div>
-      </div>
-      <div class="team-row row" style="padding:0px">
-       <div class="team left"><h5 class="team-title">Production Assistant </h5>{{content.productionAssistant.name}}</div>
-  	   <div class="team right"><h5 class="team-title">Production Assistant </h5>{{content.otherProductionAssistant.name}}</div>
-      </div>
-    </div>
-    <div class="el-logo">
-    </div> --}}
 </div>
