--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -63,13 +63,13 @@
                     <span id="fill" class="phase-path"></span>
                     <span id="progress" class="phase-path"></span>
 
-                    <div class="icon"><img src="/images/layout/stageicons/meet.svg" class="disabled" /><span>meet</span></div>
-                    <div class="icon"><img src="/images/layout/stageicons/brainstorm.svg" class="disabled" /><span>brainstorm</span></div>
-                    <div class="icon"><img src="/images/layout/stageicons/pitch.svg" class="disabled" /><span>pitch</span></div>
-                    <div class="icon"><img src="/images/layout/stageicons/deliberate.svg" class="disabled" /><span>deliberate</span></div>
-                    <div class="icon"><img src="/images/layout/stageicons/grandstand.svg" class="disabled" /><span>grandstand</span></div>
-                    <div class="icon"><img src="/images/layout/stageicons/decide.svg" class="disabled" /><span>decide</span></div>
-                   <div class="icon"> <img src="/images/layout/stageicons/score.svg" class="disabled" /><span>score</span></div>
+                    <div class="disabled icon"><img src="/images/layout/stageicons/meet.svg"/><span>meet</span></div>
+                    <div class="disabled icon"><img src="/images/layout/stageicons/brainstorm.svg"/><span>brainstorm</span></div>
+                    <div class="disabled icon"><img src="/images/layout/stageicons/pitch.svg"/><span>pitch</span></div>
+                    <div class="disabled icon"><img src="/images/layout/stageicons/deliberate.svg"/><span>deliberate</span></div>
+                    <div class="disabled icon"><img src="/images/layout/stageicons/grandstand.svg"/><span>grandstand</span></div>
+                    <div class="disabled icon"><img src="/images/layout/stageicons/decide.svg"/><span>decide</span></div>
+                   <div class="disabled icon"> <img src="/images/layout/stageicons/score.svg"/><span>score</span></div>
             </section>
 
             {{!-- ROLE CARD OVERLAY --}}
