--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -51,6 +51,8 @@ $(document).on('click touchstart', 'div.error', function() {
     $(this).hide();
 });
 
+
+
 // Remove debugging for emulated (debug) player
 if(isEmulated)
     $('#debugging').remove();
@@ -163,8 +165,8 @@ var phaseBarProgress = function() {
     $('#stages-bar #progress').css('width', (currentPhaseIndex * 17 ) + '%');
 
     // Change phase icon status
-    $('#stages-bar img:eq('+currentPhaseIndex+')').removeClass('disabled');
-    $('#stages-bar img:not(:eq('+currentPhaseIndex+'))').addClass('disabled');
+    $('#stages-bar .icon:eq('+currentPhaseIndex+')').removeClass('disabled');
+    $('#stages-bar .icon:not(:eq('+currentPhaseIndex+'))').addClass('disabled');
 
 }
 
@@ -361,7 +363,8 @@ $('#btn_new_game').click(function() {
                     $('#decks').glide({
                         type: 'carousel',
                         autoplay: false,
-                        autoheight: true
+                        autoheight: true, 
+                        paddings: 0
                     });
                     
                 });
