--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -165,10 +165,27 @@ input.post-button {
 	  vertical-align: bottom;
   }
 	
-	img {
-		display: block;
-    margin: auto;
-		
+	
+
+  .icon {
+    position: relative;
+	  display: inline-block;
+	  vertical-align: middle;
+		z-index: 1;
+		text-align:center;
+
+		span {
+			display: flex;
+	    margin-top: 20%;
+	    font-size: 10px;
+		}
+
+		img {
+			display: block;
+	    margin: auto;
+	    height: 100%;
+		}
+
 		&.disabled {
 			@include filter(grayscale, 100%);
 			animation-name: exit-stage;
@@ -180,17 +197,10 @@ input.post-button {
 			animation-name: enter-stage;
 			animation-duration: 1s;
 			animation-fill-mode: forwards;
-		}
-	}
 
-  .icon {
-    position: relative;
-	  display: inline-block;
-	  vertical-align: middle;
-		z-index: 1;
-		span {
-			display: flex;
-	    margin-top: 20%;
+			span {
+				font-weight: 800;
+			}
 		}
 
   }
@@ -272,20 +282,21 @@ input.post-button {
   height:         calc(100% - 8px);
   margin: 8px;
   margin-bottom: 0px;
-  background: $orange-dark;
-  border-radius: 20px 20px 0px 0px ;
+  background: $color-red;
+  border-radius: 0px;
   border: 3px white solid;
   border-bottom: 0px;
   z-index: 1000;
+  @include gradient-vertical($orange-dark, $white, 30%, 30%)
 
   &.open {
-  	display: block;
+  	display: block !important;
   	animation-name: open-role-card;
   	animation-duration: 1s;
   	animation-fill-mode: forwards;
   }
   &.closed {
-  	display:block;
+  	display: block !important;
   	animation-name: close-role-card;
   	animation-duration: 1s;
   	animation-fill-mode: forwards;
@@ -303,8 +314,7 @@ input.post-button {
   }
 
   .role-info {
-  	color:white;
-  	background-color: $color-grey;
+  	color:$orange-dark;
   	margin: 40px -15px;
   	padding-bottom: 20px;
 
@@ -314,28 +324,34 @@ input.post-button {
   	
   	p {
   		text-align: left;
-  		color:white;
+  		color:$orange-dark;
   		display:inline;
   	}
+  }
+  .agenda-wrap {
+  	color: $orange-dark;
   }
   .agenda-item {
   	border-radius: 100px;
   	background-color: $orange-light;
   	margin: 10px;
+  	color: white;
 
   	.value {
-	  	height: 56px;
-	  	width: 56px;
-	  	line-height: 56px;
+	  	height: 60px;
+	  	width: 60px;
+	  	line-height: 60px;
 	  	display: inline-block;
 	  	float: left;
-	  	background-size: cover;
+	    background-size: 54px 54px;
+	    background-position: 3px 3px;
+	  	// background-size: cover;
 	  	background-repeat: no-repeat;
 	  	background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/coin_stroke.png");
 	  }
 	  .agenda {
-	  	height: 56px;
-	  	line-height:56px;
+	  	height: 60px;
+	  	line-height:60px;
 	  	display:inline-block;
 	  }
   }
