--- a/templates/partials/decider/decks.hbs
+++ b/templates/partials/decider/decks.hbs
@@ -23,18 +23,20 @@
           </div>
 
           <h3 class="flag">Talking Points</h3>
-          {{!-- <ul> --}}
             {{#each questions}}
             <div class="question">{{this}}</div>
+
+              {{#if @last}}
+              {{else}}
+                <div class="dot"></div>
+              {{/if}}
+
             {{/each}}
-          {{!-- </ul> --}}
 
           <h3 class="flag sub-header">Sample Stakeholders</h3>
           <div class="stakeholders">
             {{#each roles}}
-              <div class="deck-role col-xs-6">{{title}}</div>
-
-              {{#ifeq @index 2}}</div><div class="stakeholders">{{/ifeq}}              
+              <div class="deck-role col-xs-6 {{checkEven @index}}">{{title}}</div>
             {{/each}}
           </div>
 
